@@ -10,11 +10,13 @@ Date: 2024-12-08
     - Added Radium.
     - Added tier 3 solar panels and solar panel equipment.
     - Added a way to create calcium sulfate. Im a merciful dictator, after all.
+    - Added RTG's, a small but expensive building that can take radioactive materials and turn them into power. Has a small neighbour bonus.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
     - Moved around the items needed in CRT/Oscilliscopes/RCU's.
     - Made Oscilliscopes slightly cheaper. Slightly.
+    - Changed polonium reactors to give off pollution.
 
   Fixes:
     - Fixed the science pack item names captilisation.
